<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.visa.helloandroid.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/ms_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_display"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/ms_email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_data"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/ms_token_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token_data"
        android:textSize="24sp"/>

    <TextView
    android:id="@+id/ms_fname_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fname_data"
    android:textSize="24sp"/>


    <TextView
        android:id="@+id/ms_lname_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lname_data"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/ms_url_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_data"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/ms_amount1_btn"
        android:text="@string/amount1_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ms_amount2_btn"
        android:text="@string/amount2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/ms_amount3_btn"
        android:text="@string/amount3_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/ms_edit_text"
        android:hint="@string/text_enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:id="@+id/ms_hello_btn"
        android:text="@string/button_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/ms_btn_text"
        android:onClick="sayHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
